refactor: conclui a reorganização da E.V.A. MARK I
* Criada a classe SistemaEstoque para centralizar o fluxo do sistema e a interação com o usuário
* Criada a classe EntradaConsole para centralizar a leitura e validação das entradas
* Simplificado o Main, deixando apenas a inicialização da aplicação
* Reduzidas as responsabilidades das classes Produto e Estoque
* Movida a lógica de exibição para SistemaEstoque
* Melhorada a separação de responsabilidades entre as classes
* Padronizados os retornos das operações de estoque
* Estrutura preparada para a futura implementação de persistência